# prds-algo

./: Cargo.toml  README.md
disk-schedule/: Cargo.toml
disk-schedule/src/: lib.rs  look.rs  main.rs
page-replace/: Cargo.toml
page-replace/src/: lib.rs  lru_algorithm.rs  main.rs
